--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "private": true,
-  "name": "melody",
-  "version": "1.0.0",
+  "name": "react-melody",
+  "version": "0.1.0",
+  "author": {
+    "name": "wind928",
+    "email": "1256548242@qq.com"
+  },
   "scripts": {
     "start": "dumi dev",
     "docs:build": "dumi build",
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "@umijs/test": "^3.0.5",
+    "antd": "^4.9.2",
     "dumi": "^1.0.10",
     "father-build": "^1.17.2",
     "gh-pages": "^3.0.0",
