--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-melody",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": {
     "name": "wind928",
     "email": "1256548242@qq.com"
@@ -30,7 +30,7 @@
       "prettier --parser=typescript --write"
     ]
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^16.12.0"
   },
   "devDependencies": {
@@ -41,6 +41,7 @@
     "gh-pages": "^3.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
+    "react": "^16.12.0",
     "yorkie": "^2.0.0"
   }
 }
